--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "generate-sponsors": "yarn tsx ./tools/generate-sponsors.ts",
     "generate-website-dts": "yarn tsx ./tools/generate-website-dts.ts",
     "generate-lib": "nx generate-lib @typescript-eslint/scope-manager",
+    "jscodeshift": "jscodeshift -t ./codemods/codemod_vitest.ts ./packages/**/jest.config.js -d",
+    "jscodeshift-test": "jscodeshift -t ./codemods/jest_vitest.ts ./packages/**/tests/**/**/*.{test,spec}.ts --ignore-pattern='./packages/website/'",
     "lint-fix": "eslint . --fix",
     "lint-markdown-fix": "yarn lint-markdown --fix",
     "lint-markdown": "markdownlint \"**/*.md\" --config=.markdownlint.json --ignore-path=.markdownlintignore",
@@ -58,7 +60,9 @@
     "@babel/types": "^7.20.2",
     "@nx/jest": "16.3.2",
     "@nx/linter": "16.3.2",
+    "@nx/vite": "^16.4.2",
     "@nx/workspace": "16.3.2",
+    "@playwright/test": "^1.35.1",
     "@swc/core": "^1.3.1",
     "@swc/jest": "^0.2.21",
     "@types/babel__code-frame": "^7.0.3",
@@ -95,6 +99,7 @@
     "jest-diff": "^29.0.3",
     "jest-snapshot": "^29.0.3",
     "jest-specific-snapshot": "^8.0.0",
+    "jscodeshift": "^0.15.0",
     "lerna": "7.1.0",
     "lint-staged": "^13.0.0",
     "make-dir": "^3.1.0",
@@ -111,7 +116,9 @@
     "ts-node": "10.7.0",
     "tslint": "^6.1.3",
     "tsx": "^3.12.1",
-    "typescript": "5.1.6"
+    "typescript": "5.1.6",
+    "vite": "^4.3.9",
+    "vitest": "^0.32.2"
   },
   "resolutions": {
     "typescript": "5.1.6",
@@ -135,5 +142,9 @@
     "@swc/core-linux-arm64-musl": "npm:dummypkg-a@1.0.0",
     "@swc/core-win32-arm64-msvc": "npm:dummypkg-a@1.0.0",
     "@swc/core-win32-ia32-msvc": "npm:dummypkg-a@1.0.0"
+  },
+  "dependencies": {
+    "@vitest/coverage-v8": "^0.32.2",
+    "jsdom": "^22.1.0"
   }
 }
