--- a/packages/scope-manager/tsconfig.build.json
+++ b/packages/scope-manager/tsconfig.build.json
@@ -6,7 +6,7 @@
     "rootDir": "./src",
     "resolveJsonModule": true,
     "declaration": true,
-    "types": ["node", "jest"]
+    "types": ["node", "jest", "vitest/globals"]
   },
   "include": ["src", "typings"],
   "exclude": ["**/*.spec.ts", "**/*.test.ts"],
