--- a/packages/scope-manager/tsconfig.spec.json
+++ b/packages/scope-manager/tsconfig.spec.json
@@ -3,7 +3,7 @@
   "compilerOptions": {
     "outDir": "../../dist/out-tsc",
     "module": "commonjs",
-    "types": ["jest", "node"]
+    "types": ["jest", "node", "vitest/globals"]
   },
   "exclude": ["tests/fixtures"],
   "include": [
