--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -14,6 +14,7 @@
     "sourceMap": true,
     "strict": true,
     "target": "es2017",
+    "types": ["vitest/globals"],
     "lib": ["es2017"],
     "paths": {}
   }
